YNDX: реализация ExceptionHandler (branch: module_two_six_branch)